--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Toolbox</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+
+    <!-- Dark mode switch -->
+    <div class="theme-switch" id="theme-switch">
+        <input type="checkbox" id="theme-toggle">
+        <label for="theme-toggle">🌞</label>
+    </div>
+
+    <!-- Search Bar -->
+    <div class="search-container">
+        <input type="text" id="search-bar" placeholder="Search for tools..." oninput="filterTools()">
+    </div>
+
+    <!-- Tools Section -->
+    <div class="tools-container" id="tools-container">
+        <div class="tool-card">
+            <img src="assets/images/modrinth-converter.jpg" alt="Modrinth Tool">
+            <h3>Modrinth Zip to mrpack Converter</h3>
+            <a href="converter.html">Go to Tool</a>
+        </div>
+        <!-- Add more tools here as more are created -->
+    </div>
+
+    <script src="scripts/main.js"></script>
+</body>
+</html>
 
