Added mrpack-to-zip converter and updated website layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Tool Hub</h1>
-        <button id="theme-toggle">Dark Mode</button>
+        <button id="theme-toggle">🌙</button>
     </header>
 
     <section class="search-section">
@@ -23,8 +23,27 @@
             <h3>Modrinth Zip to mrpack Converter</h3>
             <a href="card/mrpack-to-zip/index.html">Go to Tool</a>
         </div>
-        <!-- Add more tool cards here -->
+        <div class="tool-card">
+            <img src="assets/images/image-compressor.jpg" alt="Image Compressor">
+            <h3>Image Compressor</h3>
+            <a href="card/image-compressor/index.html">Go to Tool</a>
+        </div>
+        <div class="tool-card">
+            <img src="assets/images/json-formatter.jpg" alt="JSON Formatter">
+            <h3>JSON Formatter</h3>
+            <a href="card/json-formatter/index.html">Go to Tool</a>
+        </div>
+        <div class="tool-card">
+            <img src="assets/images/unit-converter.jpg" alt="Unit Converter">
+            <h3>Unit Converter</h3>
+            <a href="card/unit-converter/index.html">Go to Tool</a>
+        </div>
+        <!-- Add more tool cards as needed -->
     </section>
+
+    <footer>
+        <p>&copy; 2024 Tool Hub. All rights reserved.</p>
+    </footer>
 
     <script src="scripts/main.js"></script>
 </body>
